--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
     <section id="score-display" class="score-display"></section>
 
     <section id="summary-block">
-      <p><strong>Parziale:</strong> <span id="partial-score">0</span></p>
+      <p><strong>Partial:</strong> <span id="partial-score">0</span></p>
       <p><strong>10+X:</strong> <span id="count-10x">0</span></p>
       <p><strong>X:</strong> <span id="count-x">0</span></p>
     </section>
